Fix resumos covers color; unify abstracts into resumos

--- a/site/styles/main.css
+++ b/site/styles/main.css
@@ -98,7 +98,6 @@
   height: 100%;
   border-radius: 10px;
   box-shadow: 0px 10px 50px -10px rgba(0, 0, 0, 0.2);
-  filter: grayscale(1);
 }
 
 .masonry-color-overlay {
